# fft_smart_contract

./: Cargo.toml  README.md  deploy.sh  test.sh
src/: lib.rs
