[package]
name = "fft"
version = "0.0.1"
authors = ["1m1 <email@1m1.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-contract-standards = "4.1.1"
near-sdk = "4.1.1"
uint = { version = "0.9.3", default-features = false }

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = ["sandbox-rs"]
